[css-grid] Ignore collapsed tracks on content-distribution alignment

The CSS Box Alignment spec states that we should ignore the collapsed
tracks when computing the Distribution Alignment space to assign to the
different grid tracks.

BUG=707633

Review-Url: https://codereview.chromium.org/2825133003
Cr-Commit-Position: refs/heads/master@{#468598}

Former-commit-id: 032e6e69429f3d726bcf71d342752a7f04824533